Section 9: Networking/ingress/payment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2024-05-27T14:17:40Z"
  generation: 3
  name: ingress-webapp-pay
  namespace: critical-space
  resourceVersion: "1539"
  uid: 649197c8-750d-4bc0-ccf0-cc0fd84df4b8
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pay-service
            port:
              number: 8282
        path: /pay
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.98.11.51
